--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,8 @@
 /*
  *= require_tree .
  *= require_self
+ *= require dropzone/basic.css
+ *= require dropzone/dropzone.css
  */
+
+.translation_missing { color: red; background: black; }
