--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="authform">
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { method: :put, role: 'form' }) do |f| %>
     <%= devise_error_messages! %>
     <div class="form-group">
       <%= f.label :name %>
@@ -12,7 +12,7 @@
       <%= f.check_box :remove_profile_image %>
       <%= f.label :remove_profile_image %>
       </br>
-      <%= f.attachment_field :profile_image %>
+      <%= f.file_field :profile_image, multipart: true, id: "area-upload", class: "dropzone" %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
