--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -10,3 +10,18 @@ nav.navbar.navbar-inverse.navbar-fixed-top
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         == render 'layouts/navigation_links'
+      ul.nav.navbar-nav.navbar-right
+        li.dropdown
+          a[class="dropdown-toggle" data-toggle="dropdown" href="#"]
+            |
+            = t('menu.languages.lang')
+            |
+            '
+            span.caret
+          ul[class="dropdown-menu" role="menu"]
+            li
+              = link_to t('menu.languages.en'), change_locale_path(:en)
+            li
+              = link_to t('menu.languages.ru'), change_locale_path(:ru)
+            li
+              = link_to t('menu.languages.uk'), change_locale_path(:uk)
