--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,3 +14,10 @@ html
     main[role="main"]
       == render 'layouts/messages'
       == yield
+    /= render 'layouts/footer'
+    #footer
+      .container
+        p.text-muted
+          | Created by
+          '
+          a[href="http://212.26.132.121:2274" target="_blank"] Oleg G.Kapranov
