--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,12 +3,12 @@ html
   head
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     title
-      = content_for?(:title) ? yield(:title) : 'Fnf Estore'
-    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Fnf Estore'}"
+      = content_for?(:title) ? yield(:title) : 'Fnf Zettheme'
+    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Fnf Zettheme'}"
     == stylesheet_link_tag "application", :media => 'all'
     == javascript_include_tag 'application'
     == csrf_meta_tags
-  body#pace
+  body
     header
       == render 'layouts/navigation'
     main[role="main"]
