--- a/app/views/layouts/errors.html.slim
+++ b/app/views/layouts/errors.html.slim
@@ -3,15 +3,10 @@ html
   head
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     title
-      = content_for?(:title) ? yield(:title) : 'Fnf Estore'
-    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Fnf Estore'}"
-    == stylesheet_link_tag "application", :media => 'all'
-    == javascript_include_tag 'application'
+      = content_for?(:title) ? yield(:title) : 'Fnf Zettheme'
+    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Fnf Zettheme'}"
+    == stylesheet_link_tag "errors", :media => 'all'
+    == javascript_include_tag 'errors'
     == csrf_meta_tags
-  body
-    header
-      == render 'layouts/navigation'
-    main[role="main"]
-      == render 'layouts/messages'
-      == yield
-
+  body.gray-bg
+    = yield
