--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -8,7 +8,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<%= url_for :controller => 'visitors', :action => 'index' %>"><%= _('Catalog of products') %></a>
+                    <a class="navbar-brand" href="<%= url_for :controller => 'stores', :action => 'index' %>"><%= _('Catalog of products') %></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
