--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -1,47 +1,46 @@
-.row.wrapper.border-bottom.white-bg.page-heading2
+.row.wrapper.border-bottom.white-bg.page-heading.page-heading-botton
   .col-lg-8
-    h2 = t('Catalog')
+    h2 = _('Catalog')
     ol.breadcrumb
       li
-        a[href="#{url_for :controller => 'categories', :action => 'index'}"] = t('Categories')
+        a[href="#{url_for :controller => 'categories', :action => 'index'}"] = _('Categories')
       li.active
-        strong = t('Listing categories')
+        strong = _('Listing categories')
   .col-lg-3
     .title-action
-      = link_to "<button class='btn btn-sm btn-success dim btn-outline button-width' type='button'>#{t('Create category')}</button>".html_safe, new_category_path
+      = link_to "<button class='btn btn-sm btn-success dim btn-outline button-width' type='button'>#{_('Create category')}</button>".html_safe, new_category_path
   .col-lg-1
-
 .wrapper.wrapper-content.animated.fadeInRight.ecommerce
   .ibox-content.m-b-sm.border-bottom
     .row
       .col-sm-10
-        h2 = t('Searching categories')
+        h2 = _('Searching categories')
     .row
       .col-sm-3
         .form-group
-          label.control-label[for="user_id"] = t('Users')
-          input[type="text" id="user_id" name="user_id" value="" placeholder="#{t('Users')}" class="form-control"]
+          label.control-label[for="user_id"] = _('Users')
+          input[type="text" id="user_id" name="user_id" value="" placeholder="#{_('Users')}" class="form-control"]
       .col-sm-4
         .form-group
-          label.control-label[for="category_name"] = t('Category name')
-          input[type="text" id="category_name" name="category_name" value="" placeholder="#{t('Category name')}" class="form-control"]
+          label.control-label[for="category_name"] = _('Category name')
+          input[type="text" id="category_name" name="category_name" value="" placeholder="#{_('Category name')}" class="form-control"]
       .col-sm-2
         .form-group
-          label.control-label[for="displayed"] = t('Displayed')
+          label.control-label[for="displayed"] = _('Displayed')
           select[name="displayed" id="displayed" class="form-control"]
-            option[value="1" selected] = t('Enabled')
-            option[value="0"] = t('Disabled')
+            option[value="1" selected] = _('Enabled')
+            option[value="0"] = _('Disabled')
   .row
     .col-lg-12
       .ibox
         .ibox-content
-          h2 = t('Listing Categories')
+          h2 = _('Listing Categories')
           table.footable.table.table-stripped.toggle-arrow-tiny[data-page-size="15"]
             thead
               tr
-                th = t('Name')
-                th = t('Displayed')
-                th = t('Description')
+                th = _('Name')
+                th = _('Displayed')
+                th = _('Description')
                 th
                 th
                 th
@@ -52,38 +51,13 @@
                   td = category.name
                   td.footable-visible
                     - if category.displayed
-                      span.label.label-primary = t('Enabled')
+                      span.label.label-primary = _('Enabled')
                     -else
-                      span.label.label-danger = t('Disabled')
+                      span.label.label-danger = _('Disabled')
                   td = category.description.html_safe
                   td = link_to '<i class="fa fa-eye size-14"></i>'.html_safe, category
                   td = link_to '<i class="fa fa-pencil size-14"></i>'.html_safe, edit_category_path(category)
-                  td = link_to '<i class="fa fa-trash size-14"></i>'.html_safe, category, data: {:confirm => t('Are you sure')}, :method => :delete
+                  td = link_to '<i class="fa fa-trash size-14"></i>'.html_safe, category, data: {:confirm => _('Are you sure')}, :method => :delete
 
-/h1 Listing categories
-
-/table
-  thead
-    tr
-      th User
-      th Name
-      th Description
-      th Displayed
-      th
-      th
-      th
-
-  /tbody
-    - @categories.each do |category|
-      tr
-        td = category.user
-        td = category.name
-        td = category.description
-        td = category.displayed
-        td = link_to 'Show', category
-        td = link_to 'Edit', edit_category_path(category)
-        td = link_to 'Destroy', category, data: {:confirm => 'Are you sure?'}, :method => :delete
-
-/br
-
-/= link_to 'New Category', new_category_path
+= stylesheet_link_tag "categories", :media => 'all'
+= javascript_include_tag 'categories'
